[gd_scene load_steps=13 format=3 uid="uid://c1bk6m3h1uvmj"]

[ext_resource type="Script" path="res://main.gd" id="1_qjowe"]
[ext_resource type="AudioStream" uid="uid://15ig1oe7bbdj" path="res://yellow.wav" id="2_4753l"]
[ext_resource type="Texture2D" uid="uid://qx8r53klr50p" path="res://button.png" id="2_jy3iq"]
[ext_resource type="Texture2D" uid="uid://dm4j3dge8c6t6" path="res://Table.png" id="2_qa8mf"]
[ext_resource type="AudioStream" uid="uid://jrtlnmc8mr25" path="res://RED.wav" id="3_430hy"]
[ext_resource type="AudioStream" uid="uid://dhaqwga5g7wje" path="res://green.wav" id="4_no0uf"]
[ext_resource type="AudioStream" uid="uid://cwrwtkb86fxwo" path="res://blue.wav" id="5_2wckn"]
[ext_resource type="FontFile" uid="uid://jrag0scq1lyu" path="res://8-bit Arcade In.ttf" id="6_8b21n"]
[ext_resource type="AudioStream" uid="uid://dufwurbis38jp" path="res://game_over.wav" id="6_iq0rl"]
[ext_resource type="AudioStream" uid="uid://c44lxq167xf0v" path="res://ACE.wav" id="8_3tqjr"]
[ext_resource type="Script" path="res://pause.gd" id="10_y3yso"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n71dd"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(0, 500, 1)
gravity = Vector3(-98, 0, 0)
scale_min = 3.0
scale_max = 17.13

[node name="Main" type="Node2D"]
position = Vector2(6, 2)
script = ExtResource("1_qjowe")
metadata/_edit_group_ = true

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 504.0
offset_bottom = 504.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.25826, 1.27545)
columns = 2

[node name="Red" type="TextureButton" parent="GridContainer"]
self_modulate = Color(0.5, 0, 0, 1)
texture_filter = 1
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture_normal = ExtResource("2_jy3iq")
stretch_mode = 0

[node name="Green" type="TextureButton" parent="GridContainer"]
self_modulate = Color(0, 0.5, 0, 1)
texture_filter = 1
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture_normal = ExtResource("2_jy3iq")
stretch_mode = 0

[node name="Yellow" type="TextureButton" parent="GridContainer"]
self_modulate = Color(0.5, 0.5, 0, 1)
texture_filter = 1
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture_normal = ExtResource("2_jy3iq")
stretch_mode = 0

[node name="Blue" type="TextureButton" parent="GridContainer"]
self_modulate = Color(0, 0, 0.5, 1)
texture_filter = 1
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture_normal = ExtResource("2_jy3iq")
stretch_mode = 0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = -2
offset_left = -6.0
offset_top = -14.0
offset_right = 38.0
offset_bottom = 20.0
scale = Vector2(26.7382, 20.0292)
color = Color(0, 0, 0, 1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="CanvasLayer"]
z_index = -1
position = Vector2(1250, 316)
amount = 64
amount_ratio = 0.5
process_material = SubResource("ParticleProcessMaterial_n71dd")
lifetime = 10.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
offset_left = 656.0
offset_top = 11.0
offset_right = 1153.0
offset_bottom = 319.0
texture = ExtResource("2_qa8mf")

[node name="yellowS" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4753l")

[node name="redS" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_430hy")

[node name="greenS" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_no0uf")

[node name="blueS" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2wckn")

[node name="Score" type="Label" parent="."]
offset_left = 672.0
offset_top = -6.0
offset_right = 880.0
offset_bottom = 97.0
theme_override_fonts/font = ExtResource("6_8b21n")
theme_override_font_sizes/font_size = 75
text = "SCORE:"

[node name="highestscore" type="Label" parent="."]
offset_left = 672.0
offset_top = 120.0
offset_right = 1115.0
offset_bottom = 216.0
theme_override_fonts/font = ExtResource("6_8b21n")
theme_override_font_sizes/font_size = 70
text = "HIGHEST SCORE:"

[node name="pause" type="Label" parent="."]
offset_left = 672.0
offset_top = 307.0
offset_right = 1263.0
offset_bottom = 403.0
theme_override_fonts/font = ExtResource("6_8b21n")
theme_override_font_sizes/font_size = 36
text = "press esc to pause and 
unpause"

[node name="log" type="Label" parent="."]
offset_left = 672.0
offset_top = 409.0
offset_right = 1115.0
offset_bottom = 612.0
theme_override_fonts/font = ExtResource("6_8b21n")
theme_override_font_sizes/font_size = 70
autowrap_mode = 2
clip_text = true

[node name="cronometer" type="Timer" parent="."]

[node name="game_over" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-6, -2)
stream = ExtResource("6_iq0rl")

[node name="ACE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_3tqjr")

[node name="Pause" type="Node" parent="."]
process_mode = 3
script = ExtResource("10_y3yso")

[connection signal="pressed" from="GridContainer/Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="GridContainer/Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="GridContainer/Yellow" to="." method="_on_yellow_pressed"]
[connection signal="pressed" from="GridContainer/Blue" to="." method="_on_blue_pressed"]
[connection signal="timeout" from="cronometer" to="." method="_on_cronometer_timeout"]
